corect edit foto

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     #scaleVersion{
       width: 100%;
     }
-    .editColor p{
+    .editColor p, h3{
       font-size: 0.8rem;
     }
     .histogram label{
