edit media sait

--- a/index.html
+++ b/index.html
@@ -326,6 +326,13 @@
     .editBlock p{
       font-size: 0.8rem;
     }
+    #rangeContrast, #rangeBrightness, #rangeSaturation, #rangeSharp{
+      width: 100%;
+      margin: 0;
+    }
+    #valueContrast, #valueBrightness, #valueSaturation, #valueSharp{
+      display: none;
+    }
 }
 </style>
 </head>
