--- a/index.html
+++ b/index.html
@@ -333,6 +333,11 @@
     #valueContrast, #valueBrightness, #valueSaturation, #valueSharp{
       display: none;
     }
+    .buttonEdit{
+      position: fixed;
+      top: 4px;
+      left: 30px;
+    }
 }
 </style>
 </head>
