--- a/index.html
+++ b/index.html
@@ -231,25 +231,12 @@
     /*Отображения масштаба*/
     .scalrImg{
       position: absolute;
-      animation: zoom 1s infinite 0s ease-in-out;
-      display: none;
+      font-size: 25px;
+ 			font-weight:600;
+ 			filter: blur(0);
+      display: none
+      ;
     }
-    @keyframes zoom {
-      0%{
-        opacity: 0.08;
-        font-size: 10px;
- 				font-weight: 400;
-				filter: blur(5px);
-				letter-spacing: 3px;
-        }
-    100%{
-        opacity: 1;
-        font-size: 25px;
- 				font-weight:600;
- 				filter: blur(0);
-        
-        }
-      }
     .anime {  
 	      height:100%;
  	      width: 100%;
@@ -752,7 +739,7 @@ function zoomPlus() {
   x: Math.floor((canvas.width-img.width*scale)/2) ,
   y: Math.floor((canvas.height-img.height*scale)/2)};
   loaderZoomText.style = "display: block";
-  setTimeout(loaderZoomScale,1500);
+  setTimeout(loaderZoomScale,1000);
   clickActionsSave();
 };
 //Удаление
@@ -762,7 +749,7 @@ function zoomMinus() {
   x: Math.floor((canvas.width-img.width*scale)/2) ,
   y: Math.floor((canvas.height-img.height*scale)/2)};
   loaderZoomText.style = "display: block";
-  setTimeout(loaderZoomScale,1500);
+  setTimeout(loaderZoomScale,1000);
   clickActionsSave();
 };
 //Отключение текста отображения Масштаба
